# MiniBigDataProcessingFramework

./: CMakeLists.txt  main.cpp
include/: Session.h
include/DataSet/: DataSet.h  DataSetReader.h  DataSetWriter.h
include/DataSinks/: DataSink.h  TextDataSink.h
include/DataSources/: DataSource.h  TextDataSource.h  VectorDataSource.h
include/Types/: Int.h  Object.h  Pair.h  String.h
sources/: CMakeLists.txt  Session.inc
sources/DataSet/: DataSet.inc  DataSetReader.inc  DataSetWriter.inc
sources/DataSinks/: DataSink.inc  TextDataSink.inc
sources/DataSources/: DataSource.inc  TextDataSource.inc  VectorDataSource.inc
sources/Iterators/: Iterator.h  Iterator.inc
sources/Partitions/: Partition.h  Partition.inc
sources/TasksProcessing/: TasksExecutor.h  TasksExecutor.inc
sources/Types/: Int.inc  Object.inc  Pair.inc  String.inc
